# vibecaster

./: .gitignore  CLAUDE.md  CLOUDFLARE.md  DEPLOYMENT.md  PRODUCTION.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  find_available_port.sh  fix_nginx.sh  kill_port.sh  nginx.conf  setup_nginx.sh  setup_server.sh  start-backend.sh  start-frontend.sh  start.sh  start_production.sh  status_production.sh  stop.sh  stop_production.sh
.sightglass/: config.json
backend/: .env.example  admin.py  agents.py  api_keys.py  auth.py  auth_utils.py  author_bio.py  cli_jobs.py  database.py  logger_config.py  main.py  notifications.py  pytest.ini  requirements.txt  song_video.py  test_auth.py  test_genai_sdk.py  test_image_gen.py  test_search_urls.py  test_stage1_search.py  test_transcription.py  test_url_integration.py  transcription.py  user_auth.py  video_generation.py  video_storage.py  video_worker.py  whatsapp_post.py  whatsapp_post_v2.py
backend/agents_lib/: __init__.py  agent_tools.py  chat_stream.py  config.py  content_filter.py  content_generator.py  exceptions.py  intent_parser.py  linkedin_mentions.py  persona.py  post_generator.py  search.py  (+5 more)
cli/: package.json  pyproject.toml
cli/src/: client.js  config.js  util.js
cli/src/commands/: campaign.js  create.js  generate.js  index.js  job.js  keys.js  login.js  post-url.js  post.js  run.js  status.js  transcribe.js  video-post.js  video.js
cli/vibecaster_cli/: __init__.py  api.py  cli.py  config.py
frontend/: next.config.ts  package.json  tsconfig.tsbuildinfo
prompts/: elastic_new_year.txt
skill/: SKILL.md
(+59 files in other folders)
