[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecaster-cli"
version = "0.1.0"
description = "Command-line interface for the Vibecaster API"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
vibecaster = "vibecaster_cli.cli:main"

[tool.setuptools.packages.find]
include = ["vibecaster_cli*"]
